--- a/src/Server/Services/IdentityServer/IdentityServer.API/Views/Home/Index.cshtml
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/Views/Home/Index.cshtml
@@ -1,8 +1,29 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="login-container">
+    <div class="row form-container d-flex align-items-center justify-content-center">
+        <div class="row card-login d-flex align-items-center justify-content-center">
+            <div>
+                <h3>Login</h3>
+                <div class="row">
+                    <div>
+                        <input placeholder="E-mail" class="form-control bg-dark btn-outline-secondary login-input" type="email">
+                    </div>
+                    <div class="mt-2">
+                        <input placeholder="Senha" class="form-control bg-dark btn-outline-secondary login-input" type="password">
+                    </div>
+                </div>
+                <div class="d-flex flex-wrap justify-content-between mt-2">
+                    <div>
+                        <button type="button" class="btn btn-outline-secondary mr-2">Entrar</button>
+                        <button type="button" class="btn btn-outline-secondary mr-2">Esqueceu a senha?</button>
+                    </div>
+                    <div>
+                        <button type="button" class="btn btn-outline-secondary">Registrar-se</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
