--- a/src/Server/Services/IdentityServer/IdentityServer.API/Views/Shared/_Layout.cshtml
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - IdentityServer.API</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/home/home.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/login/login.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/IdentityServer.API.styles.css" asp-append-version="true" />
 </head>
 <body>
