--- a/src/Server/Services/IdentityServer/IdentityServer.API/Views/Auth/Index.cshtml
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/Views/Auth/Index.cshtml
@@ -17,7 +17,7 @@
                             <input placeholder="Senha" class="form-control bg-dark btn-outline-secondary login-input" type="password">
                         </div>
                     </div>
-                    <div class="d-flex flex-wrap justify-content-between mt-3">
+                    <div class="d-flex flex-wrap justify-content-between mt-3 button-container">
                         <div>
                             <button type="button" class="btn btn-outline-secondary mr-2">Entrar</button>
                             <button type="button" class="btn btn-outline-secondary mr-2">Esqueceu a senha?</button>
@@ -28,7 +28,7 @@
                     </div>
                 </div>
                 <div class="col col-md-4 d-flex align-items-center justify-content-center image-login-container">
-                    <img height="215" width="215" src="./images/login/login.png">
+                    <img height="215" width="215" src="./images/auth/auth.png">
                 </div>
             </div>
         </div>
