--- a/src/Server/Services/IdentityServer/IdentityServer.API/wwwroot/css/auth/auth.css
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/wwwroot/css/auth/auth.css
@@ -9,6 +9,7 @@
 
 .card-login {
     height: 100%;
+    padding: 2%;
     max-width: 55%;
     border-radius: 6px;
     box-shadow: 5px 5px 5px rgba(35, 32, 32, 0.4);
@@ -41,7 +42,7 @@
     background-color: rgba(21,25,29, 0.2);
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1440px) {
     .image-login-container {
         display: none !important;
 
@@ -51,4 +52,15 @@
         width: 100% !important;
     }
 }
+
+@media screen and (max-width: 800px) {
+    .button-container div, button{
+       width: 100%;
+       margin-top: 2%;
+    }
+
+}
+
+
+
 
