--- a/src/Server/Services/IdentityServer/IdentityServer.API/Views/Auth/Index.cshtml
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/Views/Auth/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@model IdentityServer.API.Application.DTO_s.Requests.IdentityUserRequest;
+@{
+    ViewData["Title"] = "Sign In";
 }
 <div class="login-container">
     <div class="row form-container d-flex align-items-center justify-content-center">
@@ -8,24 +9,25 @@
                 <div class="col col-md-8 form-components-container">
                     <h2>Autorizador - SSO</h2>
                     <h5 class="login-info">Entre com e-mail e senha para efetuar o login.</h5>
-                
-                    <div class="row input-container">
-                        <div>
-                            <input placeholder="E-mail" class="form-control bg-dark btn-outline-secondary login-input" type="email">
+                    <form asp-action="SignIn">
+                        <div class="row input-container form-group">
+                            <div>
+                                <input asp-for="Email" placeholder="E-mail" class="form-control bg-dark btn-outline-secondary login-input" type="email">
+                            </div>
+                            <div class="mt-2">
+                                <input asp-for="Password" placeholder="Senha" class="form-control bg-dark btn-outline-secondary login-input" type="password">
+                            </div>
                         </div>
-                        <div class="mt-2">
-                            <input placeholder="Senha" class="form-control bg-dark btn-outline-secondary login-input" type="password">
+                        <div class="d-flex flex-wrap justify-content-between mt-3 button-container">
+                            <div>
+                                <button type="submit" class="btn btn-outline-secondary mr-2">Entrar</button>
+                                <button type="button" class="btn btn-outline-secondary mr-2">Esqueceu a senha?</button>
+                            </div>
+                            <div>
+                                <button type="button" class="btn btn-outline-secondary">Registrar-se</button>
+                            </div>
                         </div>
-                    </div>
-                    <div class="d-flex flex-wrap justify-content-between mt-3 button-container">
-                        <div>
-                            <button type="button" class="btn btn-outline-secondary mr-2">Entrar</button>
-                            <button type="button" class="btn btn-outline-secondary mr-2">Esqueceu a senha?</button>
-                        </div>
-                        <div>
-                            <button type="button" class="btn btn-outline-secondary">Registrar-se</button>
-                        </div>
-                    </div>
+                    </form>
                 </div>
                 <div class="col col-md-4 d-flex align-items-center justify-content-center image-login-container">
                     <img height="215" width="215" src="./images/auth/auth.png">
