--- a/src/Server/Services/IdentityServer/IdentityServer.API/Views/_ViewImports.cshtml
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using IdentityServer.API
 @using IdentityServer.API.Models
+@using IdentityServer.API.Settings.Views
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
