--- a/src/Server/Services/IdentityServer/IdentityServer.API/Views/Auth/SignIn.cshtml
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/Views/Auth/SignIn.cshtml
@@ -30,7 +30,7 @@
                     </form>
                 </div>
                 <div class="col col-md-4 d-flex align-items-center justify-content-center image-login-container">
-                    <img height="215" width="215" src="./images/auth/auth.png">
+                    <img height="215" width="215" src="./../images/auth/auth.png">
                 </div>
             </div>
         </div>
