--- a/src/Server/Services/IdentityServer/IdentityServer.API/Views/Auth/SignIn.cshtml
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/Views/Auth/SignIn.cshtml
@@ -12,10 +12,10 @@
                     <form asp-action="SignIn">
                         <div class="row input-container form-group">
                             <div>
-                                <input asp-for="Email" placeholder="E-mail" class="form-control bg-dark btn-outline-secondary login-input" type="email">
+                                <input required asp-for="Email" placeholder="E-mail" class="form-control bg-dark btn-outline-secondary login-input" type="email">
                             </div>
                             <div class="mt-2">
-                                <input asp-for="Password" placeholder="Senha" class="form-control bg-dark btn-outline-secondary login-input" type="password">
+                                <input required asp-for="Password" placeholder="Senha" class="form-control bg-dark btn-outline-secondary login-input" type="password">
                             </div>
                         </div>
                         <div class="d-flex flex-wrap justify-content-between mt-3 button-container">
