--- a/src/Server/Services/IdentityServer/IdentityServer.API/Views/Users/Index.cshtml
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/Views/Users/Index.cshtml
@@ -1,11 +1,39 @@
 ﻿@{
-	ViewData["Title"] = "Home";
+	ViewData["Title"] = "Gerenciamento de Usuários";
 }
 
 <div class="home-container">
 	<div>
-		<span>
-			@ViewData["Username"]
-		</span>
+		<h2>Gerenciamento de Usuários</h2>
 	</div>
+	<table class="table table-striped table-dark table-container">
+        <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">First</th>
+              <th scope="col">Last</th>
+              <th scope="col">Handle</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+              <th scope="row">1</th>
+              <td>Mark</td>
+              <td>Otto</td>
+              <td></td>
+            </tr>
+            <tr>
+              <th scope="row">2</th>
+              <td>Jacob</td>
+              <td>Thornton</td>
+              <td></td>
+            </tr>
+            <tr>
+              <th scope="row">3</th>
+              <td>Larry</td>
+              <td>the Bird</td>
+              <td></td>
+            </tr>
+        </tbody>
+    </table>
 </div>
