--- a/src/Server/Services/IdentityServer/IdentityServer.API/Views/Shared/Error.cshtml
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/Views/Shared/Error.cshtml
@@ -1,4 +1,6 @@
-﻿@model ErrorViewModel
+﻿@using IdentityServer.API.Application.ViewModels
+
+@model ErrorViewModel
 @{
     ViewData["Title"] = "Error";
 }
