--- a/src/Server/Services/IdentityServer/IdentityServer.API/Views/_ViewImports.cshtml
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using IdentityServer.API
-@using IdentityServer.API.Models
+@using IdentityServer.API.Application.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
