add messages and fix flow

--- a/src/Server/Services/IdentityServer/IdentityServer.API/Views/Auth/SignIn.cshtml
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/Views/Auth/SignIn.cshtml
@@ -32,7 +32,7 @@
                             </div>
                         </div>
                     </form>
-                    <span>@Context.Items["ErrorMessage"]</span>
+                    <span>@ViewData["ErrorMessage"] a </span>
                 </div>
                 <div class="col col-md-4 d-flex align-items-center justify-content-center image-login-container">
                     <img height="215" width="215" src="./../images/auth/auth.png">
