initialization of the creation of repositories

--- a/src/Server/Services/IdentityServer/IdentityServer.API/Views/Shared/Error.cshtml
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/Views/Shared/Error.cshtml
@@ -1,4 +1,4 @@
-﻿@using IdentityServer.API.Application.ViewModels
+﻿@using IdentityServer.API.Application.ViewModels.Errors
 
 @model ErrorViewModel
 @{
