--- a/src/Server/Services/IdentityServer/IdentityServer.API/Views/Users/Index.cshtml
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/Views/Users/Index.cshtml
@@ -1,4 +1,8 @@
-﻿@{
+﻿@using IdentityServer.API.Application.ViewModels.Common.Pagination
+@using IdentityServer.API.Application.ViewModels.Users
+@model BasePaginationViewModel<UserViewModel>
+
+@{
 	ViewData["Title"] = "Gerenciamento de Usuários";
 }
 
@@ -6,34 +10,26 @@
 	<div>
 		<h2>Gerenciamento de Usuários</h2>
 	</div>
-	<table class="table table-striped table-dark table-container">
+
+    <a asp-action="create" type="button" class="mt-5 register-btn btn mr-2">Novo</a>
+
+	<table class="mt-3 table table-striped table-dark table-container">
         <thead>
             <tr>
-              <th scope="col">#</th>
-              <th scope="col">First</th>
-              <th scope="col">Last</th>
-              <th scope="col">Handle</th>
+                <th scope="col">Usuário</th>
+                <th scope="col">E-mail</th>
+                <th scope="col">Ações</th>
             </tr>
         </thead>
-        <tbody>
-            <tr>
-              <th scope="row">1</th>
-              <td>Mark</td>
-              <td>Otto</td>
-              <td></td>
-            </tr>
-            <tr>
-              <th scope="row">2</th>
-              <td>Jacob</td>
-              <td>Thornton</td>
-              <td></td>
-            </tr>
-            <tr>
-              <th scope="row">3</th>
-              <td>Larry</td>
-              <td>the Bird</td>
-              <td></td>
-            </tr>
-        </tbody>
+        @foreach (var user in Model.Data)
+        {
+            <tbody>
+                <tr>
+                  <td>@user.UserName</td>
+                  <td>@user.Email</td>
+                  <td></td>
+                </tr>
+            </tbody>
+        }
     </table>
 </div>
