--- a/src/Server/Services/IdentityServer/IdentityServer.API/wwwroot/css/site.css
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/wwwroot/css/site.css
@@ -10,3 +10,24 @@ main {
 .container-fluid {
     height: 100%;
 }
+
+.register-btn {
+    background-color: rgba(21,25,29, 0.8);
+    color: white;
+    width: 20vh;
+    height: 6vh;
+    font-size: 18px;
+    font-weight: 600;
+    text-decoration: none;
+    text-transform: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.register-btn:hover {
+    background-color: rgba(21,25,29, 0.7);
+    color: white;
+    font-weight: bold;
+}
