--- a/src/Server/Services/IdentityServer/IdentityServer.API/Views/Users/Index.cshtml
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/Views/Users/Index.cshtml
@@ -11,7 +11,7 @@
 		<h2>Gerenciamento de Usuários</h2>
 	</div>
 
-    <a asp-action="create" type="button" class="mt-5 register-btn btn mr-2">Novo</a>
+    <a asp-action="create" class="mt-5 register-btn btn mr-2">Novo</a>
 
 	<table class="mt-3 table table-striped table-dark table-container">
         <thead>
