adding creation user

--- a/src/Server/Services/IdentityServer/IdentityServer.API/Views/Users/Create.cshtml
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/Views/Users/Create.cshtml
@@ -23,6 +23,7 @@
 				<input placeholder="Telefone" asp-for="PhoneNumber" maxlength="20" class="form-control bg-dark btn-outline-secondary form-input create-user-input" type="tel">
 			</div>
 		</div>
-		<button type="submit" class="btn register-btn mt-4">Salvar</button>
+		<button type="submit" class="btn register-btn mr-3 mt-4">Salvar</button>
+		<partial name="./../Shared/_ErrorMessagePartial"></partial>
 	</form>
 </div>
