--- a/src/Server/Services/IdentityServer/IdentityServer.API/Views/Users/Create.cshtml
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/Views/Users/Create.cshtml
@@ -5,25 +5,4 @@
 	ViewData["Title"] = "Cadastro de usuário";
 }
 
-
-<div>
-	<div class="d-flex justify-content-between align-items-center">
-		<h2>Cadastro de Usuário</h2>
-		<a asp-action="index" class="register-btn btn mr-2">Voltar</a>
-	</div>
-	<form asp-action="Create">
-		<div class="card-register">
-			<div>
-				<h3>Informações de Acesso</h3>
-			</div>
-			<div class="d-flex justify-content-stat mt-3">
-				<input required asp-for="UserName" maxlength="50" placeholder="Nome de Usuário" class="form-control bg-dark btn-outline-secondary form-input create-user-input" type="text">
-				<input required asp-for="Email" maxlength="50"  placeholder="E-mail" class="form-control bg-dark btn-outline-secondary form-input create-user-input" type="email">
-				<input required asp-for="Password" maxlength="20" placeholder="Senha" class="form-control bg-dark btn-outline-secondary form-input create-user-input" type="password">
-				<input placeholder="Telefone" asp-for="PhoneNumber" maxlength="20" class="form-control bg-dark btn-outline-secondary form-input create-user-input" type="tel">
-			</div>
-		</div>
-		<button type="submit" class="btn register-btn mr-3 mt-4">Salvar</button>
-		<partial name="./../Shared/_ErrorMessagePartial"></partial>
-	</form>
-</div>
+@await Html.PartialAsync("./Partials/_UserFormPartial", Model)
