--- a/src/Server/Services/IdentityServer/IdentityServer.API/wwwroot/css/site.css
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/wwwroot/css/site.css
@@ -40,3 +40,20 @@ main {
     color: white;
     font-weight: bold;
 }
+
+.action-btn {
+    background-color: rgba(21,25,29, 0.8);
+    color: white;
+    height: 4vh;
+    text-decoration: none;
+    text-transform: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.action-btn:hover {
+    background-color: rgba(21,25,29, 0.6);
+    color: white;
+}
