--- a/src/Server/Services/IdentityServer/IdentityServer.API/Views/Users/Index.cshtml
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/Views/Users/Index.cshtml
@@ -32,7 +32,7 @@
                       <td>
                         <div class="row">
                             <div class="col-md-4">
-                                <a asp-action="update" class="action-btn btn">Editar</a>
+                                <a asp-action="update" asp-route-id="@user.Id" class="action-btn btn">Editar</a>
                             </div>
                             <div class="col-md-4">
                                 <a class="action-btn btn">Remover</a>
