--- a/src/Server/Services/IdentityServer/IdentityServer.API/Views/Users/Partials/_UserFormPartial.cshtml
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/Views/Users/Partials/_UserFormPartial.cshtml
@@ -3,7 +3,7 @@
 
 <div>
 	<div class="d-flex justify-content-between align-items-center">
-		<h2>Cadastro de Usuário</h2>
+		<h2>@ViewData["Title"]</h2>
 		<a asp-action="index" class="register-btn btn mr-2">Voltar</a>
 	</div>
 	<form asp-action="Create">
