--- a/src/Server/Services/IdentityServer/IdentityServer.API/Views/Users/Create.cshtml
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/Views/Users/Create.cshtml
@@ -3,6 +3,7 @@
 
 @{
 	ViewData["Title"] = "Cadastro de usuário";
+	ViewData["FormAction"] = "Create";
 }
 
 @await Html.PartialAsync("./Partials/_UserFormPartial", Model)
