--- a/src/Server/Services/IdentityServer/IdentityServer.API/Views/Users/Partials/_UserFormPartial.cshtml
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/Views/Users/Partials/_UserFormPartial.cshtml
@@ -6,7 +6,7 @@
 		<h2>@ViewData["Title"]</h2>
 		<a asp-action="index" class="register-btn btn mr-2">Voltar</a>
 	</div>
-	<form asp-action="Create">
+	<form asp-action="@ViewData["FormAction"]">
 		<div class="card-register">
 			<div>
 				<h3>Informações de Acesso</h3>
