--- a/src/Server/Services/IdentityServer/IdentityServer.API/Views/Users/Index.cshtml
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/Views/Users/Index.cshtml
@@ -13,23 +13,24 @@
 
     <a asp-action="create" class="mt-5 register-btn btn mr-2">Novo</a>
 
-	<table class="mt-3 table table-striped table-dark table-container">
-        <thead>
-            <tr>
-                <th scope="col">Usuário</th>
-                <th scope="col">E-mail</th>
-                <th scope="col">Telefone</th>
-                <th scope="col">Ações</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var user in Model.Data)
-            {
+    <div class="table-responsive mt-3">
+	    <table class="mt-3 table table-striped table-dark table-container">
+            <thead>
+                <tr>
+                    <th scope="col">Usuário</th>
+                    <th scope="col">E-mail</th>
+                    <th scope="col">Telefone</th>
+                    <th scope="col">Ações</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var user in Model.Data)
+                {
                     <tr>
-                      <td>@user.UserName</td>
-                      <td>@user.Email</td>
-                      <td>@user.PhoneNumber</td>
-                      <td>
+                        <td>@user.UserName</td>
+                        <td>@user.Email</td>
+                        <td>@user.PhoneNumber</td>
+                        <td>
                         <div class="row">
                             <div class="col-md-4">
                                 <a asp-action="update" asp-route-id="@user.Id" class="action-btn btn">Editar</a>
@@ -38,9 +39,10 @@
                                 <a class="action-btn btn">Remover</a>
                             </div>
                         </div>
-                      </td>
+                        </td>
                     </tr>
-            }
-        </tbody>
-    </table>
+                }
+            </tbody>
+        </table>
+    </div>
 </div>
