--- a/src/Server/Services/IdentityServer/IdentityServer.API/Views/Users/Index.cshtml
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/Views/Users/Index.cshtml
@@ -36,7 +36,7 @@
                                 <a asp-action="update" asp-route-id="@user.Id" class="action-btn btn">Editar</a>
                             </div>
                             <div class="col-md-4">
-                                <a class="action-btn btn">Remover</a>
+                                <a class="action-btn btn" data-bs-toggle="modal" data-bs-target="#modal-delete">Remover</a>
                             </div>
                         </div>
                         </td>
@@ -45,4 +45,10 @@
             </tbody>
         </table>
     </div>
+    @await Html.PartialAsync("./../Shared/_ConfirmationModalPartial", new ConfirmationModalViewModel() {
+        NameButtonClose = "Cancelar",
+        NameButtonSave = "Confirmar",
+        TargetId = "modal-delete",
+        Title = "Remover Usuário"
+    })
 </div>
