--- a/src/Server/Services/IdentityServer/IdentityServer.API/Views/_ViewImports.cshtml
+++ b/src/Server/Services/IdentityServer/IdentityServer.API/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using IdentityServer.API
 @using IdentityServer.API.Application.ViewModels.Errors
+@using IdentityServer.API.Application.ViewModels.Common.Modals
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
